--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App{
   min-height: 100vh;
-  background: white;
+  background: rgb(255, 255, 255);
 }
 
 
@@ -9,12 +9,19 @@
   color: black;
   font-size: 14px;
   letter-spacing: 1px;
+  transition: 0.2s;
 }
 
 
 
 a{
   text-decoration: none;
+}
+
+
+.hide{
+  opacity: 0;
+  pointer-events: none;
 }
 
 
@@ -35,11 +42,26 @@ a{
 
 
 .container{
-  width: 70%;
+  width: 90%;
   max-width: 1025px;
   
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 992px) {
+  .container{
+    width: 90%;
+  }
 }
