--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -5,9 +5,11 @@
   border: none;
   border-radius: 5px;
 
+  
+  transition: 0.2s;
   cursor: pointer;
 
-  transition: 0.2s;
+  white-space: nowrap;
 }
 
 .button:hover{
@@ -25,9 +27,19 @@
 }
 
 .black:hover{
-  background: none;
+  background: rgba(69, 79, 91, 1);
+}
 
-  border: 1px solid black;
 
-  color: black;
+
+.disabled{
+  background: rgba(145, 158, 171, 0.24);
+  color: rgba(145, 158, 171, 0.5);
+
+  pointer-events: none;
+}
+
+.disabled:hover{
+  background: rgba(145, 158, 171, 0.24);
+  color: rgba(145, 158, 171, 0.5);
 }
