--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@ header{
   align-items: center;
 }
 
-.header__container > div{
+.header__container > div, .header__container > nav{
   display: flex;
   align-items: center;
 }
