--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App{
   min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   background: rgb(255, 255, 255);
 }
 
