--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,9 +1,9 @@
 .button{
-  padding: 10px 10px; 
+  padding: 10px 15px; 
   
   background: none;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
 
   
   transition: 0.2s;
@@ -28,6 +28,20 @@
 
 .black:hover{
   background: rgba(69, 79, 91, 1);
+}
+
+
+
+.orange{
+  background: rgba(250, 84, 28, 1);
+
+  border: 1px solid rgba(0, 0, 0, 0);
+
+  color: white;
+}
+
+.orange:hover{
+  background: rgba(179, 32, 14, 1);
 }
 
 
