--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,22 @@
 header{
+  width: 100%;
   height: 95px;
+
   display: flex;
   align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  transition: 0s!important;
 }
+
+.is-pinned{
+  background-color: white;
+  position: fixed;
+  z-index: 100;
+}
+
 
 .header__container > div, .header__container > nav{
   display: flex;
@@ -273,10 +287,11 @@ hr{
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 100;
 
   transform: translateX(100%);
 
-  background: white;
+  background: rgb(255, 255, 255);
 }
 
 
@@ -327,6 +342,13 @@ hr{
   border-radius: 0;
 }
 
+
+.header__select-button{
+  border: none!important;
+}
+
+
+
 .mobile-header__links > button:last-of-type{
   border: none;
 }
@@ -362,6 +384,12 @@ hr{
 
 
 
+.mobile-header__select-container button:first-of-type{
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+
+
 
 
 
@@ -393,6 +421,10 @@ hr{
 @media screen and (max-width: 1023px) {
   header{
     height: 80px;
+  }
+
+  .is-pinned{
+    height: 81px;
   }
 
 
