--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
 
   background: rgb(255, 255, 255);
 }
