--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -57,3 +57,43 @@
   background: rgba(145, 158, 171, 0.24);
   color: rgba(145, 158, 171, 0.5);
 }
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1024px) {
+  .button:hover{
+    background: none;
+  }
+
+  .button:active{
+    transition: 0s;
+    background: rgba(0, 0, 0, 0.1);
+  }
+
+
+
+  .black:hover{
+    background: black;
+  }
+
+  .black:active{
+    background: rgba(69, 79, 91, 1);
+  }
+
+
+
+  .orange:hover{
+    background: rgba(250, 84, 28, 1);
+  }
+
+  .orange:active{
+    background: rgba(179, 32, 14, 1);
+  }
+}
