--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,12 +16,12 @@ footer{
 .footer__newsletter-title{
   display: flex;
   align-items: center;
-  gap: 1.5vw;
+  gap: 20px;
 }
 
 
 .footer__newsletter-title > img{
-  width: 11vh;
+  width: 90px;
 }
 
 
@@ -29,7 +29,7 @@ footer{
 .footer__newsletter-title > div{
   display: flex;
   flex-direction: column;
-  gap: 0.5vw;
+  gap: 10px;
 }
 
 
@@ -47,16 +47,21 @@ footer{
 
 
 
+.footer__newsletter-form-section{
+  width: 45%;
+}
+
+
 .footer__newsletter-form-section form{
-  height: 8vh;
-  max-height: 56px;
+  width: 100%;
+  height: 55px;
 
   display: flex;
 }
 
 
 .footer__newsletter-form-section input{
-  width: 25vw;
+  width: 100%;
 
   padding: 0 5%;
 
@@ -79,14 +84,14 @@ footer{
 
 
 .footer__main{
-  padding: 10vh 0 4vh 0;
+  padding: 90px 0 40px 0;
 }
 
 
 .footer__main-container{
   display: flex;
   flex-direction: column;
-  gap: 12vh;
+  gap: 90px;
 }
 
 
@@ -172,8 +177,7 @@ footer{
 
 
 .footer__form-section form{
-  height: 8vh;
-  max-height: 56px;
+  height: 55px;
 
   margin: 0 auto;
   display: flex;
@@ -197,12 +201,15 @@ footer{
 
 .footer__form-section button{
   min-width: 55px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
 .footer__form-section button img{
-  width: 60%;
-  transform: rotate(-90deg);
+  height: 70%;
 }
 
 
@@ -254,7 +261,7 @@ footer{
 @media screen and (max-width: 1023px){
   .footer__newsletter-container{
     flex-direction: column;
-    gap: 3vh;
+    gap: 40px;
   }
 
 
@@ -277,6 +284,7 @@ footer{
 
   .footer__newsletter-form-section form{
     max-width: 450px;
+    height: 48px;
 
     margin: 0 auto;
   }
@@ -290,7 +298,7 @@ footer{
 
 
   .footer__main-container{
-    gap: 6vh;
+    gap: 50px;
   }
 
 
@@ -309,6 +317,7 @@ footer{
 
 
   .footer__title{
+    max-width: 500px!important;
     text-align: center;
   }
 
@@ -316,6 +325,7 @@ footer{
 
 
   .footer__form-section form{
+    max-width: 500px;
     position: relative;
   }
 
@@ -330,21 +340,21 @@ footer{
 
 
   .footer__form-section form button{
-    min-width: 50px;
+    min-width: 40px;
     width: 15%;
     max-width: 70px;
-    height: 90%;
+    height: 47px;
 
     position: absolute;
-    top: 5%;
-    right: 0.3%;
+    top: 4px;
+    right: 4px;
 
     border-radius: 10px;
   }
 
 
   .footer__form-section form button img{
-    width: 40%;
+    height: 80%;
   }
 
 
@@ -353,19 +363,38 @@ footer{
 
   .footer__copyright{
     flex-direction: column;
-    gap: 4vh;
+    gap: 20px;
   }
 
 
   .footer__copyright > nav{
-    gap: 15vw;
+    width: 100%;
+
+    justify-content: center;
+    gap: 15%;
+
+    white-space: nowrap;
   }
 
 }
 
 
-@media screen and (max-width: 768px){
+
+
+
+@media screen and (max-width: 600px){
+  .footer__form-section form{
+    height: 48px;
+  }
+
+
   .footer__form-section form button{
-    right: 0.5%;
+    width: 45px;
+    height: 40px;
+  }
+
+
+  .footer__form-section form button img{
+    height: 100%;
   }
 }
