--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -249,7 +249,7 @@ hr{
 
 
 .header__burger-menu button img{
-  width: 3vh;
+  width: 25px;
 }
 
 
@@ -288,10 +288,11 @@ hr{
   top: 0;
   left: 0;
   z-index: 100;
-
+  
   transform: translateX(100%);
-
+  
   background: rgb(255, 255, 255);
+  overflow: auto;
 }
 
 
