--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,38 @@ a{
     width: 90%;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (prefers-color-scheme: dark) {
+  .App{
+    background: rgba(22, 28, 36, 1)!important;
+  }
+
+
+  .App *{
+    color: white;
+  }
+
+
+  input{
+    outline-width: 1px;
+    outline-color: rgba(255, 255, 255, 0.5);
+  }
+
+  input::placeholder{
+    color: rgba(145, 158, 171, 1);
+  }
+}
