--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -398,3 +398,40 @@ footer{
     height: 100%;
   }
 }
+
+
+
+
+
+
+
+
+
+
+@media (prefers-color-scheme: dark) {
+  .footer__newsletter{
+    background: rgba(145, 158, 171, 0.12);
+  }
+
+
+  .footer__newsletter-title p{
+    color: rgba(145, 158, 171, 1);
+  }
+
+
+
+  
+  .footer__title p{
+    color: rgba(145, 158, 171, 1);
+  }
+
+
+
+  .footer__title-socials img, .footer__contacts{
+    filter: contrast(0) brightness(200%);
+  }
+
+
+
+
+}
