--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -295,30 +295,60 @@ hr{
   overflow: auto;
 }
 
-
 .mobile-header__menu-modal_active{
   transform: translateX(0);
 }
 
 
+.mobile-header__menu-modal-header{
+  height: 80px;
 
-.mobile-header__logo{
-  margin: 30px 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  position: relative;
 }
 
 
-
-.mobile-header__close-button{
-  position: absolute;
-  top: 15px;
-  right: 5%;
+.mobile-header__menu-modal-header > div{
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
+
+
+.mobile-header__menu-modal-header > div > button{
+  padding-top: 14px;
+}
+
+
+.mobile-header__lang-button img{
+  width: 24px;
+  height: 24px;
+}
+
 
 
 .mobile-header__close-button img{
-  width: 30px;
-  height: 30px;
+  width: 26px;
+  height: 26px;
 }
+
+
+
+
+.mobile-header__language-modal{
+  /* width: fit-content; */
+
+  gap: 0px!important;
+
+  top: 90%;
+  left: 65%;
+  z-index: 110;
+}
+
+
 
 
 
