feat: OfflineSEOAnalyse(+translation) created, Header transition 0.2s

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,10 +1,13 @@
 .button{
   padding: 10px 15px; 
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
   
   background: none;
   border: none;
   border-radius: 10px;
-
   
   transition: 0.2s;
   cursor: pointer;
