--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -268,6 +268,7 @@ footer{
   .footer__newsletter-title{
     flex-direction: column;
     gap: 20px;
+    text-align: center;
   }
 
   .footer__newsletter-title > div{
@@ -430,8 +431,4 @@ footer{
   .footer__title-socials img, .footer__contacts{
     filter: contrast(0) brightness(200%);
   }
-
-
-
-
 }
