--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@ a{
   text-decoration: none;
 }
 
+.link-disabled{
+  pointer-events: none;
+}
+
+
 
 .hide{
   opacity: 0;
@@ -32,6 +37,18 @@ a{
 
 input{
   padding: 0 15px;
+}
+
+.input-darkScheme{  
+  background-color: rgba(255, 255, 255, 0.1);
+
+  border: none;
+  border-radius: 10px;
+  outline-color: rgba(255, 255, 255);
+}
+
+.input-darkScheme::placeholder{
+  color: rgba(145, 158, 171, 1);
 }
 
 
@@ -53,7 +70,7 @@ input{
 
 .container{
   width: 90%;
-  max-width: 1025px;
+  max-width: 1200px;
   
   margin: 0 auto;
   display: flex;
