--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+:root{
+  --main-orange: rgba(250, 84, 28, 1);
+}
