--- a/src/components/LatestPosts/LatestPosts.css
+++ b/src/components/LatestPosts/LatestPosts.css
@@ -56,8 +56,6 @@
 
   border-radius: 16px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-
-  transition: opacity 1s!important;
 }
 
 .swiper-slide-active{
@@ -95,6 +93,7 @@
   z-index: -1;
 
   opacity: 0;
+  transition: opacity 0.5s;
 
   background: linear-gradient(180deg, #000000 20%, rgba(255, 255, 255, 0.5) 100%);
 }
@@ -250,5 +249,30 @@
 
   .swiper-button-prev-unique, .swiper-button-next-unique {
     display: none;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+@media (prefers-color-scheme: dark){
+  .LatestPosts__swiper-slide{
+    background-color: rgba(33, 43, 54, 1);
+  }
+
+
+  .swiper-slide-header div{
+    color: white;
+  }
+
+
+  .swiper-slide-background{
+    background: linear-gradient(180deg, #000000 20%, rgba(255, 255, 255, 0) 100%);
   }
 }
