--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -81,6 +81,7 @@ section {
 .second__container {
     display: flex;
     margin-top: 30px;
+    gap: 50px;
 }
 
 .second__container-about-us {
@@ -113,8 +114,6 @@ section {
 
 .second__container-button {
     display: flex;
-    flex-direction: row;
-    align-items: center;
     border: none;
     background: none;
     font-weight: 600;
@@ -124,7 +123,6 @@ section {
     color: #FA541C;
     /* padding: 21px 22px; */
     width: 0;
-    margin-left: 42vh;
 }
 
 .second__container-button::after {
@@ -216,39 +214,58 @@ section {
 
 
 .third__container-blocks {
-    width: 100%;
     display: flex;
-    gap: 90px;
+    align-items: center;
+    gap: 50px;
 }
 
 .third__container-block {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 30px;
     border: black;
-    padding: 40px 12px;
 }
 
-/* .first__block {
-    padding: 40px 32px;
+.first__block {
+    width: 264px;
+    height: 376px;
     box-shadow: -8px 8px 24px -4px rgba(145, 158, 171, 0.1);
     border-radius: 16px;
+    /* border: 1px solid black; */
+}
+
+.first__block img {
+    padding-top: 30px;
 }
 
 .second__block {
-    padding: 64px 32px;
+    width: 264px;
+    height: 424px;
     box-shadow: -16px 16px 56px -8px rgba(145, 158, 171, 0.16);
     border-radius: 16px;
+    /* border: 1px solid black; */
+}
+
+.second__block img {
+    padding-top: 50px;
 }
 
 .third__block {
-    padding: 80px 32px;
+    width: 264px;
+    height: 484px;
+    /* border: 1px solid black; */
+    border-radius: 16px;
+    box-shadow: -24px 24px 72px -8px rgba(145, 158, 171, 0.24);
 }
 
-.forth__block {
-    padding: 40px 32px;
-} */
+.third__block img {
+    padding-top: 75px;
+}
+
+.third__block h1 {
+    text-align: center;
+}
 
 .third__container-block h1 {
     font-style: normal;
@@ -270,11 +287,12 @@ section {
     flex-direction: column;
     align-items: baseline;
     gap: 40px;
+    margin-top: 10vh;
 }
 
 .forth__container-blocks {
     display: flex;
-    gap: 25px;
+    gap: 50px;
 }
 
 .forth__container-block {
@@ -290,19 +308,19 @@ section {
 
 .one {
     background: #FDAB76;
-    margin-top: 60px;
+    margin-top: 90px;
     color: #770508;
 }
 
 .two {
     background: #77F0ED;
-    margin-top: 40px;
+    margin-top: 60px;
     color: #063963;
 }
 
 .three {
     background: #FFE475;
-    margin-top: 20px;
+    margin-top: 30px;
     color: #7A5204;
 }
 
@@ -333,6 +351,27 @@ section {
     display: flex;
     flex-direction: column;
     margin-top: 15vh;
+}
+
+.our__work-descriptian {
+    padding-right: 110vh;
+}
+
+.our__work-descriptian p {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 20px;
+    color: #919EAB;
+    text-transform: uppercase;
+}
+
+.our__work-descriptian h1 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
+    margin-top: 20px;
 }
 
 .our__work-blocks {
@@ -512,22 +551,26 @@ section {
 }
 
 .team__container {
-    display: flex;
-    flex-direction: row;
-    gap: 10vh;
-    height: 752px;
+    position: relative;
     background: #161C24;
-    opacity: 0.88;
     margin-top: 15vh;
+}
+
+.team__container-wrapper {
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: space-between;
+    height: 752px;
+    opacity: 0.88;
+    width: 80%;
 }
 
 .team__container-description {
     display: flex;
     flex-direction: column;
     align-items: baseline;
-    gap: 20 px;
-    margin-top: 20vh;
-    margin-left: 25vh;
+    gap: 20px;
+    width: 35%;
 }
 
 .team__container-description p:first-child {
@@ -558,10 +601,11 @@ section {
 }
 
 .team__container-persons {
+    position: absolute;
     display: flex;
     flex-direction: row;
     gap: 20px;
-    margin-top: 20vh;
+    padding-left: 60vh;
 }
 
 .team__container-Pena {
@@ -623,7 +667,7 @@ section {
     background: url('./assets/marvin.png');
 }
 
-.pricing-container {
+.pricing__container {
     margin-top: 15vh;
 }
 
@@ -676,6 +720,126 @@ section {
 .switch input:checked[type="checkbox"]:before {
     left: 17px;
 }
+
+.blocks__container {
+    display: flex;
+    margin-top: 15vh;
+}
+
+.blocks__container {
+    display: flex;
+}
+
+.blocks__container-block1 {
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+    width: 362px;
+    height: 524px;
+    background: #FFFFFF;
+    box-shadow: -4px 4px 24px rgba(145, 158, 171, 0.08);
+    border-radius: 16px;
+}
+
+.blocks__container-block2 {
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+    width: 362px;
+    height: 566px;
+    background: #FFFFFF;
+    box-shadow: -16px 16px 56px -8px rgba(145, 158, 171, 0.16);
+    border-radius: 16px;
+}
+
+.blocks__container-block3 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+    width: 362px;
+    height: 608px;
+    background: #FFFFFF;
+    box-shadow: -24px 24px 72px -8px rgba(145, 158, 171, 0.24);
+    border-radius: 16px;
+}
+
+.blocks__container h1 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    color: #FA541C;
+    padding-top: 64px;
+    padding-left: 37px;
+}
+
+.blocks__container img {
+    position: absolute;
+    padding-left: 261px;
+    padding-top: 64px;
+}
+
+.blocks__container-description {
+    width: 300px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 26px;
+    color: #637381;
+    padding-left: 37px;
+}
+
+.blocks__container p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 26px;
+    padding-left: 37px;
+}
+
+.blocks__container p::before {
+    content: '✓';
+    color: #FA541C;
+    font-size: 20px;
+    gap: 5px;
+}
+
+.blocks__container-price {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
+    padding-left: 37px;
+}
+
+.blocks__container-price::after {
+    content: '/mo';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: #919EAB;
+}
+
+.blocks__container button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 11px 22px;
+    width: 282px;
+    height: 48px;
+    background: #FA541C;
+    border-radius: 8px;
+    margin-left: 37px;
+}
+
+
+
+
+
+
 
 
 
