--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,12 @@ button:active{
 
 
 
+textarea{
+  resize: none;
+}
+
+
+
 
 
 
@@ -144,7 +150,6 @@ button:active{
 
 .App-dark input{
   outline-width: 1px;
-  outline-color: rgba(255, 255, 255, 0.5);
 }
 
 .App-dark input::placeholder{
