--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -104,11 +104,11 @@
 }
 
 .orange:hover{
-  background: rgba(179, 32, 14, 1);
+  background: rgb(212, 43, 21);
 }
 
 .orange:active{
-  background: rgba(250, 84, 28, 1);
+  background: rgb(152, 51, 17);
 }
 
 
