--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -838,6 +838,7 @@
 .FAQS__container {
     position: relative;
     margin-top: 15vh;
+    margin-bottom: 120px;
     display: flex;
     gap: 10vh;
 }
